# SummedAreaTableAssignment

./: CMakeLists.txt  DataContainer.h  DirectXHelper.cpp  DirectXHelper.h  InputParser.cpp  InputParser.h  README.md  README.txt  SummedAreaTableGenerator.h  SummedAreaTableGeneratorCpuImpl.cpp  SummedAreaTableGeneratorCpuImpl.h  SummedAreaTableGeneratorGpuImpl.cpp  SummedAreaTableGeneratorGpuImpl.h  constants.h  main.cpp
data/: descending_10_x_10.txt  large_values_10_x_10.txt  ones_12_x_13.txt  ones_2000_x_1000.txt  square_10_x_10.txt  twos_1024_x_1024.txt  twos_128_x_128.txt  twos_256_x_256.txt
shaders/: summed_area_table_horizontal.compute.hlsl  summed_area_table_vertical.compute.hlsl
